# src/adapters/controllers/user_controller.go
@@ -4,6 +4,7 @@ import (
 	"log"
 
 	"github.com/Nagoya-Caravan-Hackathon-PDD/backend/src/datastructure/input"
+	_ "github.com/Nagoya-Caravan-Hackathon-PDD/backend/src/datastructure/output"
 	"github.com/Nagoya-Caravan-Hackathon-PDD/backend/src/datastructure/types"
 	"github.com/Nagoya-Caravan-Hackathon-PDD/backend/src/usecase/ports"
 	"github.com/google/uuid"
@@ -20,6 +21,18 @@ func NewUserController(interactor ports.UserInput) *userController {
 	}
 }
 
+// User	godoc
+//
+// @Summary		Create User
+// @Description Create User
+// @Tags		User
+// @Produce		json
+// @Param		CreateUser	body		input.CreateUser			true	"create user request"
+// @Success		200						{object}	output.CreateUserResponse			"success response"
+// @Failure		400						{object}	nil									"error response"
+// @Failure		409						{object}	nil									"error response"
+// @Failure		500						{object}	nil									"error response"
+// @Router		/users					[POST]
 func (uc *userController) CreateUser(ctx echo.Context) error {
 	var reqBody input.CreateUser
 
@@ -43,6 +56,18 @@ func (uc *userController) GetUser(ctx echo.Context) error {
 	return nil
 }
 
+// User	godoc
+//
+// @Summary		Delete User
+// @Description Delete User
+// @Tags		User
+// @Produce		json
+// @Param		encounter_id			path		string						true	"create user request"
+// @Success		200						{object}	output.DeleteUserResponse			"success response"
+// @Failure		400						{object}	nil									"error response"
+// @Failure		409						{object}	nil									"error response"
+// @Failure		500						{object}	nil									"error response"
+// @Router		/users/:user_id			[DELETE]
 func (uc *userController) DeleteUsers(ctx echo.Context) error {
 	var reqQuery input.DeleteUsers
 
